# CDTGenerator

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Linear_cell_complex.h  README.md  TODO  build.sh  cdtGen.cpp  cube.ply  index.html  params.json  testRply.cpp  testfacetnormal.cpp
data/: .gitignore  1.ply  concentric_cylinders.ply  cube.ply  delaunay.ply  london_bridge.ply  output.ply
docs/: Doxyfile
docs/html/: annotated.html  cdtGen_8h_source.html  classDegenerateVertexSetCandidate-members.html  classDegenerateVertexSetCandidate.html  classTriangle-members.html  classTriangle.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  files.html  index.html  rply_8h_source.html  structstd_1_1pointHash_3_01CGALPoint_01_4-members.html  structstd_1_1pointHash_3_01CGALPoint_01_4.html  structt__ply__-members.html  structt__ply__.html  structt__ply__argument__-members.html  structt__ply__argument__.html  structt__ply__element__-members.html  structt__ply__element__.html  structt__ply__idriver__-members.html  structt__ply__idriver__.html  structt__ply__odriver__-members.html  structt__ply__odriver__.html  structt__ply__property__-members.html  structt__ply__property__.html  tabs.css
docs/html/search/: all_0.js  classes_1.js  classes_2.js  search.css  search.js
docs/latex/: annotated.tex  classDegenerateVertexSetCandidate.tex  classTriangle.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  refman.tex  structstd_1_1pointHash_3_01CGALPoint_01_4.tex  structt__ply__.tex  structt__ply__argument__.tex  structt__ply__element__.tex  structt__ply__idriver__.tex  structt__ply__odriver__.tex  structt__ply__property__.tex
gtest-1.7.0/: CMakeLists.txt
include/: .gitignore  cdtGen.h  cdtGen.h~  rply.h  rply.h~
rply/: rply.cpp
sampleDatasets/: delaunay.ply
sampleProgs/: buildTestLCCAutoConstruction.sh  buildTestPLYTOLCCConstruction.sh  buildTestPLYTOLCCTOPLYConversion.sh  buildtestCMapMarks.sh  buildtestLCCConstruction.sh  buildtestPLYTOLCCConstruction.sh  testCMapMarks.cpp  testLCCAutoConstruction.cpp  testLCCConstruction.cpp  testPLYTOLCCConstruction.cpp  testPLYTOLCCTOPLYConversion.cpp
src/: .gitignore  1  CMakeLists.txt  cdtGen.cpp  cdtGen.cpp.orig  main.cpp  rply.cpp~
testing/: testingDetails.tex
testingDocumentation/: 1  testingDetails.aux  testingDetails.tex
unit-tests/: .gitignore  CMakeLists.txt  testFacetRecovery.cpp  testInitialDT.cpp  testLocalDegeneracyRemoval.cpp  testPLCInput.cpp  testSegmentRecovery.cpp
